# newsporter

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.yaml  defaults.yaml  import_news.py  pricing.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
newsporter/: __init__.py  cache.py  cli.py  config.py  dedup.py  llm.py  models.py  pipeline.py  upload_log.py
newsporter/load/: __init__.py  wordpress.py
newsporter/sources/: __init__.py  base.py  huggingface.py  jsonl.py
newsporter/transforms/: __init__.py  base.py  cleaners.py  llm_synth.py  passthrough.py
presets/: jsonl_passthrough.yaml  news.yaml
tools/: newsporter-meta.php
