[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newsporter"
version = "0.2.0"
description = "Pluggable Extract / Transform / Load pipeline for seeding WordPress with synthesized post corpora"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
]
dependencies = [
    "datasets>=2.16.0",
    "openai>=1.12.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
]

[project.scripts]
newsporter = "newsporter.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["newsporter*"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["runs", "data"]

[tool.ruff.lint]
# Modern but not paranoid: real bugs and dead code, import hygiene,
# pyupgrade rewrites, simplifications, and ruff's own findings.
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    "E501",   # line length; formatter handles it
    "SIM108", # ternary expressions are not always clearer
]

[tool.ruff.format]
quote-style = "double"

[tool.basedpyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
include = ["newsporter"]
exclude = ["**/runs", "**/data", "**/__pycache__"]
reportMissingTypeStubs = false
